--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,6 @@
     { "src": "index.html", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index/index.html" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
