--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,16 @@
   "version": 2,
   "public": true,
   "builds": [
-    { "src": "index.html", "use": "@vercel/static" }
+    { "src": "index.html", "use": "@vercel/static" },
+    { "src": "login/*.html", "use": "@vercel/static" },
+    { "src": "dashboard/*.html", "use": "@vercel/static" },
+    { "src": "cadastro/*.html", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/(.*)", "dest": "/index.html" },
+     { "src": "/login", "dest": "/login/login.html" },
+    { "src": "/dashboard", "dest": "/dashboard/dashboard.html" },
+    { "src": "/cadastro", "dest": "/cadastro/cadastro.html" },
+    { "src": "/", "dest": "/login/login.html" }
   ]
 }
