--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "pti1.2",
+  "name": "Traineasy",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "dependencies": {
-    "axios": "^1.11.0",
-    "bcryptjs": "^3.0.2",
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.0",
-    "express": "^4.21.2",
-    "multer": "^2.0.2",
-    "mysql2": "^3.14.2"
-  },
   "scripts": {
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "engines": {
-    "node": "18.x"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "assemblyai": "^4.16.1",
+    "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "mercadopago": "^2.9.0",
+    "multer": "^2.0.2",
+    "mysql2": "^3.15.1",
+    "path": "^0.12.7"
+  }
 }
